--- a/messenger.ui
+++ b/messenger.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Messenger</class>
- <widget class="QMainWindow" name="Messenger">
+ <class>Messanger</class>
+ <widget class="QMainWindow" name="Messanger">
   <property name="geometry">
    <rect>
     <x>0</x>
